Add CMS foreground tests.